# stellar-pay

./: .gitignore  README.md
contract/: Cargo.toml  run.sh
contract-soroswap/: Cargo.toml
contract-soroswap/.stellar/network/: mainnet.toml
contract-soroswap/bindings/: README.md  package-lock.json
contract-soroswap/bindings/src/: index.ts
contract-soroswap/src/: admin.rs  contract.rs  error.rs  events.rs  lib.rs  slippage.rs  test.rs  types.rs
contract/src/: admin.rs  allow.rs  errors.rs  fee.rs  lib.rs  order.rs  slippage.rs  soroswap_router.rs  test.rs  types.rs
frontend/: bun.lockb  package.json  vite.config.ts
frontend/public/: soroswap-testnet-tokens.json
frontend/src/: App.tsx  config.ts  main.tsx  soroban.tsx  stellar-kit.tsx
frontend/src/components/: connect-button.tsx  swap-form.tsx
frontend/src/components/soroban/: connect-button.tsx  swap-form.tsx
frontend/src/helpers/: convert.ts  utils.tsx
frontend/src/providers/: stellar.provider.tsx
