[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = "22.0.0-rc.3.2"
soroban-token-sdk = "22.0.0-rc.3.2"
hex = "0.4.3"
soroswap-library = "1.0.21"

[dev-dependencies]
soroban-sdk ={ version = "22.0.0-rc.3.2", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
overflow-checks = true
opt-level = "z"
strip = true
debug = 0

[profile.dev]
overflow-checks = true

